fix(array): Correct label align for arrays

--- a/DOCUMENT/IHM/views/attributes/attribute.less
+++ b/DOCUMENT/IHM/views/attributes/attribute.less
@@ -75,7 +75,7 @@
 }
 
 .dcpAttribute__right.dcpAttribute__labelPosition--left {
-  .make-xs-column(9);
+  .make-xs-column(10);
 }
 
 .dcpAttribute__left.dcpAttribute__labelPosition--left {
@@ -83,7 +83,8 @@
 }
 
 .dcpArray__label.dcpAttribute__left {
-  .make-lg-column(3);
+  .make-lg-column(2);
+  padding-left:@font-size-base/2;
   @media (min-width: @screen-lg-min) {
     background-color: inherit;
     border: none;
@@ -113,11 +114,11 @@
 }
 
 .dcpArray__content.dcpAttribute__right.dcpAttribute__labelPosition--left {
-  .make-xs-column(9);
+  .make-xs-column(10);
 }
 
 .dcpArray__content.dcpAttribute__right {
-  .make-lg-column(9);
+  .make-lg-column(10);
 }
 
 .dcpArray--left {
